fixed height footer section on tablet device

--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -1,45 +1,4 @@
-/* tablet */
-/* @media all and (max-width:768px) {
-    nav {
-
-        width: 100%;
-        overflow: visible;
-    }
-
-    nav ul {
-        width: 55%;
-        display: flex;
-        flex-direction: column;
-        margin: 0;
-        padding: 0;
-        position: absolute;
-        top: 0;
-        right: 0;
-        height: 80vh;
-        background-color: rgba(123, 223, 242, 1);
-        justify-content: start;
-        transform: translateX(100%);
-        transition: all .8s;
-        opacity: 0;
-    }
-
-    nav ul li {
-        margin-left: 0px;
-        display: block;
-        color: #ffff;
-        margin-top: 40px;
-    }
-
-    nav ul.slide {
-        opacity: 1;
-        transform: translateX(0);
-    }
-
-    .toggle-menu {
-        display: flex;
-    }
-} */
-/* iphone x */
+/* Tablet */
 @media all and (max-width:768px) {
 
     /*  Header and Navbar */
@@ -245,10 +204,10 @@
 
     /* symptomp section */
     .symptomps {
-        margin-top: 100px;
+        margin-top: 30px;
         padding: 0;
         width: 100%;
-        height: 400px;
+        height: 380px;
     }
 
     .symptomp-container {
@@ -291,7 +250,7 @@
 
     /* footer */
     footer {
-        height: 300px;
+        height: 820px;
         margin: 0;
     }
 
@@ -338,6 +297,7 @@
     }
 }
 
+/* iphone X etc */
 @media all and (min-width:375px) and (max-width:480px) {
 
     /* header and navbar */
